--- a/src/WRA.Umbraco.Web/Views/mywraDues.cshtml
+++ b/src/WRA.Umbraco.Web/Views/mywraDues.cshtml
@@ -51,7 +51,7 @@
                         <div class="row g-0 h-100 align-items-baseline align-content-start align-items-lg-stretch align-content-lg-stretch">
                             <div class="mywra-tab__panel-return col-12 col-lg-3" style="background-color: var(--bs-gray-10)">
                                 <div class="mywra-left px-4 pb-6 pt-5 pt-lg-9">
-                                    <button class="js-page-tab-return-btn outline-0 border-0 text-link fw-bold text-decoration-none" title="Close Panel"><i class="fa-solid fa-chevron-left"></i> <span class="fs-lg ps-2">Profile</span></button>
+                                    <button class="js-page-tab-return-btn outline-0 border-0 text-link fw-bold text-decoration-none" title="Close Panel"><i class="fa-solid fa-chevron-left"></i> <span class="fs-lg ps-2">WRA Dues</span></button>
                                 </div>
                             </div>
                             <div class="col position-relative bg-white pb-5">
@@ -169,7 +169,7 @@
                         <div class="row g-0 h-100 align-items-baseline align-content-start align-items-lg-stretch align-content-lg-stretch">
                             <div class="mywra-tab__panel-return col-12 col-lg-3" style="background-color: var(--bs-gray-10)">
                                 <div class="mywra-left px-4 pb-6 pt-5 pt-lg-9">
-                                    <button class="js-page-tab-return-btn outline-0 border-0 text-link fw-bold text-decoration-none" title="Close Panel"><i class="fa-solid fa-chevron-left"></i> <span class="fs-lg ps-2">Profile</span></button>
+                                    <button class="js-page-tab-return-btn outline-0 border-0 text-link fw-bold text-decoration-none" title="Close Panel"><i class="fa-solid fa-chevron-left"></i> <span class="fs-lg ps-2">WRA Dues</span></button>
                                 </div>
                             </div>
                             <div class="col position-relative bg-white pb-5">
