Deployment 162a77b1-189b-4c4c-9561-75a2e9c47409: Run number 812

--- a/src/WRA.Umbraco.Web/Views/mywraCompany.cshtml
+++ b/src/WRA.Umbraco.Web/Views/mywraCompany.cshtml
@@ -85,6 +85,25 @@
                                                 @Html.Raw(content.IntroContentAgentEdHist)
                                             </div>
                                         }
+
+                                        <div class="w-100 py-3 px-4 border border-medium rounded mb-3">
+                                            <label for="lorem" class="mb-3">At eget vulputate sapien duis curabitur vulputate morbi feugiat euismod.</label>
+                                            <select id="lorem" class="form-select">
+                                                <option selected>Select a ...</option>
+                                            </select>
+                                        </div>
+
+                                        <div class="w-100 py-3 px-4 border border-medium rounded mb-5">
+                                            <label for="lorem" class="mb-3">At eget vulputate sapien duis curabitur vulputate morbi feugiat euismod.</label>
+                                            <select id="lorem" class="form-select">
+                                                <option selected>Select a ...</option>
+                                            </select>
+                                            <div class="form-check mt-2">
+                                                <input id="download-csv" class="form-check-input" type="checkbox">
+                                                <label for="download-csv" class="form-check-label">Download as CSV</label>
+                                            </div>
+                                        </div>
+
                                     </div>
                                 </div>
                             </div>
@@ -141,6 +160,34 @@
                                                 @Html.Raw(content.IntroContentEventRegistration)
                                             </div>
                                         }
+
+                                        <div class="w-100 py-3 px-4 border border-medium rounded mb-3">
+                                            <label for="lorem" class="mb-3">At eget vulputate sapien duis curabitur vulputate morbi feugiat euismod.</label>
+                                            <select id="lorem" class="form-select">
+                                                <option selected>Select a ...</option>
+                                            </select>
+                                        </div>
+
+                                        <div class="w-100 py-3 px-4 border border-medium rounded mb-5">
+                                            <label for="lorem" class="mb-3">At eget vulputate sapien duis curabitur vulputate morbi feugiat euismod.</label>
+                                            <select id="lorem" class="form-select">
+                                                <option selected>Select a ...</option>
+                                            </select>
+                                            <div class="mt-3">
+                                                <button class="btn btn-primary btn-sm">
+                                                    <i class="fa-regular fa-arrow-down-to-bracket pe-2"></i>
+                                                    Download CSV
+                                                </button>
+                                            </div>
+                                            <h3 class="p-2 d-block mb-3" style="background-color: var(--bs-primary-bg-subtle)">Lorem Convention (00/0/0000)</h3>
+                                            <div class="form-check mt-2">
+                                                <input id="download-csv" class="form-check-input" type="checkbox">
+                                                <label for="download-csv" class="form-check-label">Only show registered agents.</label>
+                                            </div>
+
+                                        </div>
+
+
                                     </div>
                                 </div>
                             </div>
