--- a/src/WRA.Umbraco.Web/Views/mywraDues.cshtml
+++ b/src/WRA.Umbraco.Web/Views/mywraDues.cshtml
@@ -55,7 +55,7 @@
                                 </div>
                             </div>
                             <div class="col position-relative bg-white pb-5">
-                                <div class="mywra-right container container--md ms-0 pt-5 pt-lg-11">
+                                <div class="mywra-right container container--sm ms-0 pt-5 pt-lg-11">
 
                                     @if (!String.IsNullOrEmpty(content.PayDuesHeadline))
                                     {
@@ -173,7 +173,7 @@
                                 </div>
                             </div>
                             <div class="col position-relative bg-white pb-5">
-                                <div class="mywra-right container container--md ms-0 pt-5 pt-lg-11">
+                                <div class="mywra-right container container--sm ms-0 pt-5 pt-lg-11">
 
                                     @if (!String.IsNullOrEmpty(content.DuesHistoryHeadline))
                                     {
