--- a/src/WRA.Umbraco.Web/Views/mywraProfile.cshtml
+++ b/src/WRA.Umbraco.Web/Views/mywraProfile.cshtml
@@ -51,7 +51,7 @@
                                     </div>
                                 </div>
                                 <div class="col position-relative bg-white pb-5">
-                                    <div class="mywra-right container container--md ms-0 pt-5 pt-lg-11">
+                                    <div class="mywra-right container container--sm ms-0 pt-5 pt-lg-11">
 
                                         @if (!String.IsNullOrEmpty(content.PersonalInformationHeadline))
                                         {
@@ -142,7 +142,7 @@
                                     </div>
                                 </div>
                                 <div class="col position-relative bg-white pb-5">
-                                    <div class="mywra-right container container--md ms-0 pt-5 pt-lg-11">
+                                    <div class="mywra-right container container--sm ms-0 pt-5 pt-lg-11">
                                         @if (!String.IsNullOrEmpty(content.CommitteesHeadline))
                                         {
                                             <h2 class="h2">@content.CommitteesHeadline</h2>
@@ -170,7 +170,7 @@
                                     </div>
                                 </div>
                                 <div class="col position-relative bg-white pb-5">
-                                    <div class="mywra-right container container--md ms-0 pt-5 pt-lg-11">
+                                    <div class="mywra-right container container--sm ms-0 pt-5 pt-lg-11">
 
                                         @if (!String.IsNullOrEmpty(content.ContributionsHeadline))
                                         {
@@ -258,7 +258,7 @@
                                     </div>
                                 </div>
                                 <div class="col position-relative bg-white pb-5">
-                                    <div class="mywra-right container container--md ms-0 pt-5 pt-lg-11">
+                                    <div class="mywra-right container container--sm ms-0 pt-5 pt-lg-11">
 
                                         @if (!String.IsNullOrEmpty(content.SubscriptionsHeadline))
                                         {
