--- a/src/WRA.Umbraco.Web/wwwroot/css/src/_typography.scss
+++ b/src/WRA.Umbraco.Web/wwwroot/css/src/_typography.scss
@@ -56,6 +56,16 @@
     }
 }
 
+.yellow-line {
+    &::after {
+        content: "";
+        display: block;
+        width: 75px;
+        border-top: solid 1.5px $yellow;
+        margin: 0.5rem 0;
+    }
+}
+
 blockquote {
     font-weight: 600;
 }
